fix messenger icon overlaying chat container on mobile

--- a/src/stylesheets/mobile.less
+++ b/src/stylesheets/mobile.less
@@ -11,7 +11,7 @@ html.sk-widget-opened {
             #sk-holder {
                 #sk-container {
                     top: 0;
-                    z-index: 99999999999999 !important;
+                    z-index: 999999999 !important;
                     margin-bottom: 0;
 
                     #sk-header {
